# compilation-principle

./: .gitignore  1.cpp  123.cpp  2-1.cpp  2-2.cpp  3.cpp  4.cpp  CMakeLists.txt  LICENSE  README.md  coder.cpp  coder.h  combuilder.cpp  combuilder.h  compile.c  compile.cpp  compile.h  compiler.cpp  compiler.h  conditional.cpp  conditional.h  grammar.cpp  grammar.h  keyword.txt  lexical.cpp  lexical.h  lr.cpp  my_structs.h  operation.cpp  operation.h  parser.cpp  parser.h  t1.c  t1.txt  test.c
code/: 1.c  2.c  20.c  21.c  3.c  32.c  4.c  5.c  6.c  7.c  72.c  t2.c  test4.txt
experiment/: 2-1.cpp  3.cpp  4.cpp
